add navber to home page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <a href="#">products page</a>
+                <br>
+            <a href="#">contact page</a>
+        </nav>
+    </header>
     <h1>welcom to home page</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus rerum unde voluptas sequi recusandae natus
         impedit placeat aut quo, velit atque, repellendus mollitia cumque aperiam delectus molestiae commodi? Doloribus
