create table in products page

--- a/products.html
+++ b/products.html
@@ -12,6 +12,23 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae laboriosam eligendi quidem aliquam alias quo
         explicabo minus laborum omnis magni commodi in adipisci illum pariatur, odio quisquam? Iusto, tempore
         consequuntur?</p>
+    <hr>
+    <table border="1px" >
+        <thead>title</thead>
+        <tbody>
+            <tr>
+                <th>1</th>
+                <th>2</th>
+                <th>2</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+            </tr>
+        </tbody>
+    </table>
+
 </body>
 
 </html>
