create ul tag in index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     </header>
 
     <h1>this is a home page</h1>
+    <br>
+    <ul>
+        <li>
+            <p> this is a paragraph of text</p>
+        </li>
+    </ul>
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus rerum unde voluptas sequi recusandae natus
         impedit placeat aut quo, velit atque, repellendus mollitia cumque aperiam delectus molestiae commodi? Doloribus
